# cim-domain-document

./: Cargo.toml  DOCUMENT_DOMAIN_DEFINITION.md  README.md  document_editing_user_story.md  flake.nix  workflow_refactoring_checklist.md  workflow_refactoring_design.md  workflow_state_machine_design.md
.claude/: CLAUDE.md  INDEX.md  context_guide.md  core_rules.md  progress_tracking.md  start_here.md
.claude/instructions/: cim-conversation-model.md  main-directives.md
.claude/workflows/: implementation-flow.md
doc/: api.md  domain-status.md  user-stories.md
doc/user-stories/: us-100-cid-first-ingestion.md
examples/: cid_first_ingestion_api.rs  cim_workflow_demo.rs  document_workflow.rs  test_imports.rs  workflow_integration_example.rs  workflow_integrity_demo.rs
src/: lib.rs
src/aggregate/: document_aggregate.rs  mod.rs
src/commands/: edit_commands.rs  ingestion_commands.rs  mod.rs
src/events/: edit_events.rs  ingestion_events.rs  mod.rs
src/handlers/: command_handler.rs  document_content_handler_simple.rs  document_metadata_handler.rs  document_version_handler_simple.rs  event_handler.rs  mod.rs
src/nats/: message_identity.rs  mod.rs  subjects.rs
src/projections/: mod.rs
src/queries/: mod.rs
src/services/: chain_verification.rs  content_intelligence.rs  import_export.rs  mod.rs  object_store.rs  search.rs  templates.rs  version_comparison.rs
src/workflow/: mod.rs  (+14 more)
tests/: archive_delete_integration_test.rs  content_intelligence_test.rs  document_tests.rs  document_workflow_test.rs  domain_verification_test.rs  search_integration_test.rs  templates_integration_test.rs  version_comparison_test.rs  workflow_integration_test.rs
(+7 files in other folders)
