[package]
name = "cim-domain-document"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
uuid = { version = "1.11", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
cid = { version = "0.11", features = ["serde"] }

# CIM dependencies
cim-core-domain = { path = "../cim-core-domain" }
cim-component = { path = "../cim-component" }

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
