[package]
name = "cim-domain-document"
version = "0.2.0"
edition = "2021"
authors = ["The CowboyAI Team"]
description = "Document domain for the Composable Information Machine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thecowboyai/cim-domain-document"
keywords = ["document", "domain", "ddd", "event-sourcing", "cim"]
categories = ["data-structures", "asynchronous"]

[dependencies]
# Core dependencies
cim-domain = { path = "../cim-domain" }
cim-infrastructure = { path = "../cim-infrastructure" }
cim-ipld = { path = "../cim-ipld" }

# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# CID support
cid = "0.11"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.6"
